// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-json.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
<!-- #10333 -->
\`\`\`json
packages\\the-hub\\cypress\\fixtures\\gridConfiguration.json
\`\`\`
=====================================output=====================================
<!-- #10333 -->

\`\`\`json
packages\\the-hub\\cypress\\fixtures\\gridConfiguration.json
\`\`\`

================================================================================
`;

exports[`jsonc.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
\`\`\`jsonc
   // comment
{
     "foo"   :    "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`jsonc
// comment
{
  "foo": "bar"
}
\`\`\`

================================================================================
`;

exports[`trailing_comma.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

================================================================================
`;
